Add live project links

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               </div>
 
               <div class="project-item__description paragraph">
-                <p>Real time GPS tracking for all the things</p>
+                <p>Open source real time GPS tracking</p>
               </div>
 
               <div class="project-item__logo-box">
@@ -381,7 +381,7 @@
                   </svg>
                   <div class="project-item__button-text">Code</div>
                 </a>
-                <a href="#" class="project-item__link">
+                <a href="https://circlegps.com" class="project-item__link">
                   <svg
                     class="project-item__svg"
                     viewBox="0 0 24 24"
@@ -437,7 +437,7 @@
                   <div class="project-item__button-text">Code</div>
                 </a>
                 <a
-                  href="https://sdbowen.github.io/portfolio/"
+                  href="https://sdbowen.io"
                   class="project-item__link"
                 >
                   <svg
