Fix margin in repo section

--- a/index.html
+++ b/index.html
@@ -436,10 +436,7 @@
                   </svg>
                   <div class="project-item__button-text">Code</div>
                 </a>
-                <a
-                  href="https://sdbowen.io"
-                  class="project-item__link"
-                >
+                <a href="https://sdbowen.io" class="project-item__link">
                   <svg
                     class="project-item__svg"
                     viewBox="0 0 24 24"
