--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
           <div class="about-box">
             <div class="about-box__description-box">
               <p class="about-box__text">
-                Hello! I'm <span class="text-underline--1">Steven Bowen</span>,
+                Hello! I'm <span class="text-highlight--1">Steven Bowen</span>,
                 I'm a Full-Stack Web Developer.
               </p>
               <p class="about-box__text">
                 I'm a fan of
-                <span class="text-underline--2">solving problems with code</span
+                <span class="text-highlight--2">solving problems with code</span
                 >, building cool things for the web, and making it all look
                 nice.
               </p>
