Add contact section

--- a/index.html
+++ b/index.html
@@ -405,6 +405,30 @@
             </div>
           </div>
         </section>
+
+        <hr />
+
+        <section class="section-contact">
+          <h2 class="heading-primary u-margin-bottom">Get in Touch</h2>
+          <div class="contact-box">
+            <p class="contact-box__text paragraph">
+              Connect with me on
+              <a
+                class="text-underline--1"
+                href="https://mobile.twitter.com/SD_Bowen"
+                >Twitter</a
+              >,
+              <a
+                class="text-underline--2"
+                href="https://www.linkedin.com/in/sdbowen/"
+                >LinkedIn</a
+              >, or send an
+              <a class="text-underline--3" href="mailto:sdbowen.git@gmail.com"
+                >email</a
+              >.
+            </p>
+          </div>
+        </section>
       </main>
 
       <hr />
