Add new project

--- a/index.html
+++ b/index.html
@@ -245,18 +245,18 @@
               <div class="project-item__name">
                 <a href="https://sdbowen.github.io/portfolio"
                   ><h4 class="heading-secondary heading-secondary--underline">
-                    Portfolio
+                    Auto Tripping
                   </h4></a
                 >
               </div>
 
               <div class="project-item__description paragraph">
-                <p>My portfolio with a minimalist design</p>
+                <p>Web application to assist in taxi scheduling and billing</p>
               </div>
 
               <div class="project-item__logo-box">
                 <img
-                  src="./img/portfolio-logo.png"
+                  src="./img/auto-tripping-logo.png"
                   alt="Project Name Logo"
                   class="project-item__logo"
                 />
@@ -264,7 +264,7 @@
 
               <div class="project-item__links-box">
                 <a
-                  href="https://github.com/SDBowen/portfolio"
+                  href="https://github.com/SDBowen/scheduler"
                   class="project-item__link"
                 >
                   <svg class="project-item__svg" viewBox="0 0 32 32">
@@ -279,7 +279,10 @@
                   </svg>
                   <div class="project-item__button-text">Code</div>
                 </a>
-                <a href="https://sdbowen.io" class="project-item__link">
+                <span
+                  href="https://autotripping.com"
+                  class="project-item__link project-item__link--disabled"
+                >
                   <svg
                     class="project-item__svg"
                     viewBox="0 0 24 24"
@@ -293,7 +296,7 @@
                     <path d="M3 9h18M9 21V9" />
                   </svg>
                   <div class="project-item__button-text">Website</div>
-                </a>
+                </span>
               </div>
             </div>
             <div class="project-item">
@@ -337,6 +340,61 @@
                   <div class="project-item__button-text">Code</div>
                 </a>
                 <a href="http://geckofit.surge.sh/" class="project-item__link">
+                  <svg
+                    class="project-item__svg"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="#333"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
+                    <path d="M3 9h18M9 21V9" />
+                  </svg>
+                  <div class="project-item__button-text">Website</div>
+                </a>
+              </div>
+            </div>
+            <div class="project-item">
+              <div class="project-item__name">
+                <a href="https://sdbowen.github.io/portfolio"
+                  ><h4 class="heading-secondary heading-secondary--underline">
+                    Portfolio
+                  </h4></a
+                >
+              </div>
+
+              <div class="project-item__description paragraph">
+                <p>My portfolio with a minimalist design</p>
+              </div>
+
+              <div class="project-item__logo-box">
+                <img
+                  src="./img/portfolio-logo.png"
+                  alt="Project Name Logo"
+                  class="project-item__logo"
+                />
+              </div>
+
+              <div class="project-item__links-box">
+                <a
+                  href="https://github.com/SDBowen/portfolio"
+                  class="project-item__link"
+                >
+                  <svg class="project-item__svg" viewBox="0 0 32 32">
+                    <path
+                      fill="none"
+                      stroke="#333"
+                      stroke-width="2.667"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M21.333 24l8-8-8-8M10.667 8l-8 8 8 8"
+                    />
+                  </svg>
+                  <div class="project-item__button-text">Code</div>
+                </a>
+                <a href="https://sdbowen.io" class="project-item__link">
                   <svg
                     class="project-item__svg"
                     viewBox="0 0 24 24"
