Add og meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Steven Bowen | Web Developer</title>
+    <meta property="og:title" content="Steven Bowen" />
+    <meta property="og:description" content="Full-Stack Web Developer" />
+    <meta
+      property="og:image"
+      content="https://github.com/SDBowen/sdbowen.github.io/blob/master/img/portfolio-logo.png"
+    />
+    <meta property="og:url" content="http://sdbowen.io" />
+    <meta name="twitter:card" content="summary" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
