Add additional meta tags

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta property="og:description" content="Full-Stack Web Developer" />
     <meta
       property="og:image"
-      content="https://github.com/SDBowen/sdbowen.github.io/blob/master/img/portfolio-logo.png"
+      content="https://res.cloudinary.com/dk9vbfmw6/image/upload/v1550537716/portfolio-logo.jpg"
     />
     <meta property="og:url" content="http://sdbowen.io" />
     <meta name="twitter:card" content="summary" />
+    <meta property="og:site_name" content="Steven Bowen | Web Developer" />
+    <meta name="twitter:image:alt" content="SB Logo" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
