--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
               >Repos</a
             >
           </li>
-          <!-- <li class="nav-menu__item">
-            <a href="#" class="nav-menu__link" onclick="closeNav()">Contact</a>
-          </li> -->
+          <li class="nav-menu__item">
+            <a href="#contact" class="nav-menu__link" onclick="closeNav()"
+              >Contact</a
+            >
+          </li>
           <li class="nav-menu__social-links">
             <div class="nav-menu__item--social">
               <a
@@ -133,9 +135,9 @@
             <li class="page-nav__item">
               <a href="#repos" class="page-nav__link">Repos</a>
             </li>
-            <!-- <li class="page-nav__item">
-              <a href="#" class="page-nav__link">Contact</a>
-            </li> -->
+            <li class="page-nav__item">
+              <a href="#contact" class="page-nav__link">Contact</a>
+            </li>
             <li class="page-nav__item">
               <a
                 href="https://www.linkedin.com/in/sdbowen/"
@@ -476,7 +478,7 @@
 
         <hr />
 
-        <section class="section-contact">
+        <section class="section-contact" id="contact">
           <h2 class="heading-primary u-margin-bottom">Get in Touch</h2>
           <div class="contact-box">
             <p class="contact-box__text paragraph">
@@ -513,9 +515,9 @@
             <li class="page-nav__item">
               <a href="#repos" class="page-nav__link">Repos</a>
             </li>
-            <!-- <li class="page-nav__item">
-              <a href="#" class="page-nav__link">Contact</a>
-            </li> -->
+            <li class="page-nav__item">
+              <a href="#contact" class="page-nav__link">Contact</a>
+            </li>
             <li class="page-nav__item">
               <a
                 href="https://www.linkedin.com/in/sdbowen/"
