Add missing links

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <div class="projects-listing">
             <div class="project-item">
               <div class="project-item__name">
-                <a href="#"
+                <a href="https://circlegps.com"
                   ><h4 class="heading-secondary heading-secondary--underline">
                     CircleGPS
                   </h4></a
@@ -255,7 +255,7 @@
             </div>
             <div class="project-item">
               <div class="project-item__name">
-                <a href="https://sdbowen.github.io/portfolio"
+                <a href="https://github.com/SDBowen/scheduler"
                   ><h4 class="heading-secondary heading-secondary--underline">
                     Auto Tripping
                   </h4></a
@@ -370,7 +370,7 @@
             </div>
             <div class="project-item">
               <div class="project-item__name">
-                <a href="https://sdbowen.github.io/portfolio"
+                <a href="https://sdbowen.io"
                   ><h4 class="heading-secondary heading-secondary--underline">
                     Portfolio
                   </h4></a
