Correct portfolio github link

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
               <div class="project-item__links-box">
                 <a
-                  href="https://github.com/SDBowen/portfolio"
+                  href="https://github.com/SDBowen/sdbowen.github.io"
                   class="project-item__link"
                 >
                   <svg class="project-item__svg" viewBox="0 0 32 32">
