Update repo links

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
               <div class="project-item__links-box">
                 <a
-                  href="https://github.com/SDBowen/scheduler"
+                  href="https://github.com/SDBowen/auto-tripping"
                   class="project-item__link"
                 >
                   <svg class="project-item__svg" viewBox="0 0 32 32">
@@ -336,7 +336,7 @@
 
               <div class="project-item__links-box">
                 <a
-                  href="https://github.com/chingu-voyage4/Geckos-Team-0"
+                  href="https://github.com/SDBowen/gecko-fit"
                   class="project-item__link"
                 >
                   <svg class="project-item__svg" viewBox="0 0 32 32">
