--- a/index.html
+++ b/index.html
@@ -255,28 +255,28 @@
             </div>
             <div class="project-item">
               <div class="project-item__name">
-                <a href="https://github.com/SDBowen/scheduler"
+                <a href="https://github.com/chingu-voyages/v8-bears-team-03"
                   ><h4 class="heading-secondary heading-secondary--underline">
-                    Auto Tripping
+                    devbev
                   </h4></a
                 >
               </div>
 
               <div class="project-item__description paragraph">
-                <p>Web application to assist in taxi scheduling and billing</p>
+                <p>Developer focused social media web application</p>
               </div>
 
               <div class="project-item__logo-box">
                 <img
-                  src="./img/auto-tripping-logo.png"
+                  src="./img/devbev-logo.png"
                   alt="Project Name Logo"
-                  class="project-item__logo"
+                  class="project-item__logo project-item__logo-rounded"
                 />
               </div>
 
               <div class="project-item__links-box">
                 <a
-                  href="https://github.com/SDBowen/auto-tripping"
+                  href="https://github.com/chingu-voyages/v8-bears-team-03"
                   class="project-item__link"
                 >
                   <svg class="project-item__svg" viewBox="0 0 32 32">
@@ -291,10 +291,7 @@
                   </svg>
                   <div class="project-item__button-text">Code</div>
                 </a>
-                <span
-                  href="https://autotripping.com"
-                  class="project-item__link project-item__link--disabled"
-                >
+                <a href="https://devbev.io" class="project-item__link">
                   <svg
                     class="project-item__svg"
                     viewBox="0 0 24 24"
@@ -308,7 +305,7 @@
                     <path d="M3 9h18M9 21V9" />
                   </svg>
                   <div class="project-item__button-text">Website</div>
-                </span>
+                </a>
               </div>
             </div>
             <div class="project-item">
