--- a/index.html
+++ b/index.html
@@ -196,33 +196,32 @@
         <hr />
 
         <section class="section-projects" id="projects">
-          <h2 class="heading-primary u-margin-bottom">Featured Projects</h2>
+          <h2 class="heading-primary u-margin-bottom">Recent Projects</h2>
           <div class="projects-listing">
             <div class="project-item">
               <div class="project-item__name">
-                <a href="https://circlegps.com"
+                <a href="https://www.mystudiolo.com/en"
                   ><h4 class="heading-secondary heading-secondary--underline">
-                    CircleGPS
+                    MyStudiolo
                   </h4></a
                 >
               </div>
 
               <div class="project-item__description paragraph">
-                <p>Open source real time GPS tracking</p>
+                <p>Art management platform for collectors</p>
               </div>
 
               <div class="project-item__logo-box">
                 <img
-                  src="./img/circlegps-logo.png"
-                  alt="CircleGPS Logo"
+                  src="./img/mystudiolo-logo.png"
+                  alt="MyStudiolo Logo"
                   class="project-item__logo"
                 />
               </div>
 
               <div class="project-item__links-box">
                 <a
-                  href="https://github.com/SDBowen/circle-gps"
-                  class="project-item__link"
+                  class="project-item__link project-item__link--disabled"
                 >
                   <svg class="project-item__svg" viewBox="0 0 32 32">
                     <path
@@ -236,119 +235,7 @@
                   </svg>
                   <div class="project-item__button-text">Code</div>
                 </a>
-                <a href="https://circlegps.com" class="project-item__link">
-                  <svg
-                    class="project-item__svg"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#333"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
-                    <path d="M3 9h18M9 21V9" />
-                  </svg>
-                  <div class="project-item__button-text">Website</div>
-                </a>
-              </div>
-            </div>
-            <div class="project-item">
-              <div class="project-item__name">
-                <a href="https://github.com/chingu-voyages/v8-bears-team-03"
-                  ><h4 class="heading-secondary heading-secondary--underline">
-                    devbev
-                  </h4></a
-                >
-              </div>
-
-              <div class="project-item__description paragraph">
-                <p>Developer focused social media web application</p>
-              </div>
-
-              <div class="project-item__logo-box">
-                <img
-                  src="./img/devbev-logo.png"
-                  alt="Project Name Logo"
-                  class="project-item__logo project-item__logo-rounded"
-                />
-              </div>
-
-              <div class="project-item__links-box">
-                <a
-                  href="https://github.com/chingu-voyages/v8-bears-team-03"
-                  class="project-item__link"
-                >
-                  <svg class="project-item__svg" viewBox="0 0 32 32">
-                    <path
-                      fill="none"
-                      stroke="#333"
-                      stroke-width="2.667"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M21.333 24l8-8-8-8M10.667 8l-8 8 8 8"
-                    />
-                  </svg>
-                  <div class="project-item__button-text">Code</div>
-                </a>
-                <a href="https://devbev.io" class="project-item__link">
-                  <svg
-                    class="project-item__svg"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#333"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
-                    <path d="M3 9h18M9 21V9" />
-                  </svg>
-                  <div class="project-item__button-text">Website</div>
-                </a>
-              </div>
-            </div>
-            <div class="project-item">
-              <div class="project-item__name">
-                <a href="http://geckofit.surge.sh/"
-                  ><h4 class="heading-secondary heading-secondary--underline">
-                    Gecko Fit
-                  </h4></a
-                >
-              </div>
-
-              <div class="project-item__description paragraph">
-                <p>
-                  Create custom recipes and calculate their nutritional totals
-                </p>
-              </div>
-
-              <div class="project-item__logo-box">
-                <img
-                  src="./img/gecko-fit-logo.png"
-                  alt="Project Name Logo"
-                  class="project-item__logo"
-                />
-              </div>
-
-              <div class="project-item__links-box">
-                <a
-                  href="https://github.com/SDBowen/gecko-fit"
-                  class="project-item__link"
-                >
-                  <svg class="project-item__svg" viewBox="0 0 32 32">
-                    <path
-                      fill="none"
-                      stroke="#333"
-                      stroke-width="2.667"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M21.333 24l8-8-8-8M10.667 8l-8 8 8 8"
-                    />
-                  </svg>
-                  <div class="project-item__button-text">Code</div>
-                </a>
-                <a href="http://geckofit.surge.sh/" class="project-item__link">
+                <a href="https://www.mystudiolo.com/en" class="project-item__link">
                   <svg
                     class="project-item__svg"
                     viewBox="0 0 24 24"
@@ -369,18 +256,18 @@
               <div class="project-item__name">
                 <a href="https://sdbowen.io"
                   ><h4 class="heading-secondary heading-secondary--underline">
-                    Portfolio
+                    Digital Agent
                   </h4></a
                 >
               </div>
 
               <div class="project-item__description paragraph">
-                <p>My portfolio with a minimalist design</p>
+                <p>Shipping port processes automation</p>
               </div>
 
               <div class="project-item__logo-box">
                 <img
-                  src="./img/portfolio-logo.png"
+                  src="./img/digital-agent-logo.png"
                   alt="Project Name Logo"
                   class="project-item__logo"
                 />
@@ -388,8 +275,7 @@
 
               <div class="project-item__links-box">
                 <a
-                  href="https://github.com/SDBowen/sdbowen.github.io"
-                  class="project-item__link"
+                  class="project-item__link project-item__link--disabled"
                 >
                   <svg class="project-item__svg" viewBox="0 0 32 32">
                     <path
@@ -403,7 +289,7 @@
                   </svg>
                   <div class="project-item__button-text">Code</div>
                 </a>
-                <a href="https://sdbowen.io" class="project-item__link">
+                <a href="https://web.digital-agent.com/?lang=en" class="project-item__link">
                   <svg
                     class="project-item__svg"
                     viewBox="0 0 24 24"
@@ -418,56 +304,6 @@
                   </svg>
                   <div class="project-item__button-text">Website</div>
                 </a>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <hr />
-
-        <section class="section-repos" id="repos">
-          <h2 class="heading-primary u-margin-bottom">Latest Repos</h2>
-          <div class="repo-listing">
-            <div class="repo-item">
-              <div class="repo-item__date"><p class="heading-date"></p></div>
-              <div class="repo-item__title">
-                <h4 class="heading-secondary">
-                  <a class="repo-item__link" href="#"></a>
-                </h4>
-              </div>
-              <div class="repo-item__language">
-                <p class="repo-item__language-text"></p>
-              </div>
-              <div class="repo-item__description">
-                <p class="paragraph"></p>
-              </div>
-            </div>
-            <div class="repo-item">
-              <div class="repo-item__date"><p class="heading-date"></p></div>
-              <div class="repo-item__title">
-                <h4 class="heading-secondary">
-                  <a class="repo-item__link" href="#"></a>
-                </h4>
-              </div>
-              <div class="repo-item__language">
-                <p class="repo-item__language-text"></p>
-              </div>
-              <div class="repo-item__description">
-                <p class="paragraph"></p>
-              </div>
-            </div>
-            <div class="repo-item">
-              <div class="repo-item__date"><p class="heading-date"></p></div>
-              <div class="repo-item__title">
-                <h4 class="heading-secondary">
-                  <a class="repo-item__link" href="#"></a>
-                </h4>
-              </div>
-              <div class="repo-item__language">
-                <p class="repo-item__language-text"></p>
-              </div>
-              <div class="repo-item__description">
-                <p class="paragraph"></p>
               </div>
             </div>
           </div>
